@@ -1,3 +1,7 @@
+2012-01-17	Oren Ben-Kiki <github-oren@ben-kiki.org>
+
+	* Add hack for sorting hash YAML keys.
+
 2012-01-15	Oren Ben-Kiki <github-oren@ben-kiki.org>
 
 	* Add WithTempdir mix-in module.
